tests/snapshots/snapshots__pipeline@errors_unhandled.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/errors_unhandled.pr
---
== tokens ==
VOpen KwError UIdent("NotFound") LParen KwString RParen VSemi Fn Ident("lookup") LParen Ident("k") RParen Eq VOpen If Ident("k") EqEq StringLit("x") Then VOpen Int(IntLit { value: 1, suffix: None }) VClose VSemi Else VOpen Throw UIdent("NotFound") LParen Ident("k") RParen VClose VClose VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Ident("lookup") LParen StringLit("y") RParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [
        ErrorDecl {
            name: "NotFound",
            params: [
                Str,
            ],
            span: 0..22,
        },
    ],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "lookup",
            params: [
                Param {
                    name: "k",
                    ty: None,
                    borrow: false,
                    default: None,
                },
            ],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: If(
                    Spanned {
                        node: Bin(
                            Eq,
                            Spanned {
                                node: Var(
                                    "k",
                                ),
                                span: 44..45,
                            },
                            Spanned {
                                node: Str(
                                    "x",
                                ),
                                span: 49..52,
                            },
                        ),
                        span: 44..52,
                    },
                    Spanned {
                        node: Int(
                            IntLit {
                                value: 1,
                                suffix: None,
                            },
                        ),
                        span: 62..63,
                    },
                    Spanned {
                        node: Sugar(
                            Throw(
                                "NotFound",
                                [
                                    Spanned {
                                        node: Var(
                                            "k",
                                        ),
                                        span: 90..91,
                                    },
                                ],
                            ),
                        ),
                        span: 75..92,
                    },
                ),
                span: 41..92,
            },
            wheres: [],
            span: 24..92,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 106..113,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "lookup",
                                    ),
                                    span: 114..120,
                                },
                                [
                                    Spanned {
                                        node: Str(
                                            "y",
                                        ),
                                        span: 121..124,
                                    },
                                ],
                            ),
                            span: 114..125,
                        },
                    ],
                ),
                span: 106..126,
            },
            wheres: [],
            span: 94..126,
        },
    ],
}

== types ==
lookup : (String) -> Int ! {NotFound}
main : () -> Unit ! {IO, NotFound}

== core (cbpv) ==
fn lookup(k) =
  return k to t@0
  return "x" to t@1
  str_eq(t@0, t@1) to t@3
  if t@3 then
    return 1
  else
    return k to t@2
    do throw@NotFound(t@2)
fn main() =
  return "y" to t@4
  lookup(t@4) to t@5
  print t@5 to t@6
  print_nl

== fbip (rc) ==
fn lookup(k) =
  dup k
  return k to t@0
  return "x" to t@1
  str_eq(t@0, t@1) to t@3
  if t@3 then
    drop t@3
    drop k
    return 1
  else
    drop t@3
    return k to t@2
    do throw@NotFound(t@2)
fn main() =
  return "y" to t@4
  lookup(t@4) to t@5
  print t@5 to t@6
  drop t@6
  print_nl

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@.str0 = private constant { i64, i64, i64, [2 x i8] } { i64 1152921504606846976, i64 1398034944, i64 1, [2 x i8] c"y\00" }, align 8
@.str1 = private constant { i64, i64, i64, [34 x i8] } { i64 1152921504606846976, i64 1398034944, i64 33, [34 x i8] c"unhandled effect `throw@NotFound`\00" }, align 8
@prism_native_kont_table = constant [802 x i8] c"scheme  prism-core-hash-v2\0Abundle  2eea56faba9c2b09e2883166b8fcf1092e91778a28ada9f1bbee72a08942bfd7\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:2eea56faba9c2b09e2883166b8fcf1092e91778a28ada9f1bbee72a08942bfd7\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_lookup  926a1a811cf6ca259c2be122e4fd5627a811a2bb51ac3daac56a91d3df900b06  lookup\0Afn      prismfn_main  62cfc83c8884265cb53048dc6e41b0622154cf3b44f46aeb97fafd26dba8c503  main\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [920 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  2eea56faba9c2b09e2883166b8fcf1092e91778a28ada9f1bbee72a08942bfd7\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:2eea56faba9c2b09e2883166b8fcf1092e91778a28ada9f1bbee72a08942bfd7\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_lookup 926a1a811cf6ca259c2be122e4fd5627a811a2bb51ac3daac56a91d3df900b06 lookup arity 2 slots abi-word[arg0=%a0:word,arg1=%a1:word]\0Astate prismfn_main 62cfc83c8884265cb53048dc6e41b0622154cf3b44f46aeb97fafd26dba8c503 main arity 0 slots abi-word[]\0A\00", section ",.prism_kont", align 1
@.kont_symbol1 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash1 = private constant [65 x i8] c"62cfc83c8884265cb53048dc6e41b0622154cf3b44f46aeb97fafd26dba8c503\00"
@.kont_name1 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol1, ptr @.kont_hash1, ptr @.kont_name1 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  %t1 = call ptr @prism_alloc(i64 0)
  %t2 = getelementptr inbounds i8, ptr %t1, i64 8
  store i64 4180332117194187166, ptr %t2, align 8
  %t4 = ptrtoint ptr %t1 to i64
  %t6 = call i64 @prismap_1(i64 %t4, i64 ptrtoint (ptr @.str0 to i64))
  call void @prism_rc_dec(i64 %t4)
  call void @prism_print_int(i64 %t6)
  call void @prism_rc_dec(i64 %t6)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  ret i64 0
}

; Function Attrs: nounwind
declare ptr @prism_alloc(i64) #0

; Function Attrs: nounwind
define i64 @prismap_1(i64 %_clos, i64 %_a0) #0 {
entry:
  %_cp = inttoptr i64 %_clos to ptr
  %_tp = getelementptr inbounds i8, ptr %_cp, i64 8
  %_tag = load i64, ptr %_tp, align 8
  switch i64 %_tag, label %_dead [
    i64 4180332117194187166, label %_lam4180332117194187166
  ]

_lam4180332117194187166:                          ; preds = %entry
  %_r4180332117194187166 = call i64 @prismlam_4180332117194187166(i64 %_a0)
  br label %_merge

_dead:                                            ; preds = %entry
  call void @prism_apply_error()
  unreachable

_merge:                                           ; preds = %_lam4180332117194187166
  %_result = phi i64 [ %_r4180332117194187166, %_lam4180332117194187166 ]
  ret i64 %_result
}

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare void @prism_print_int(i64) #0

; Function Attrs: nounwind
declare void @prism_print_nl() #0

; Function Attrs: nounwind
define i64 @prismlam_4180332117194187166(i64 %_p0) #0 {
entry:
  call void @prism_rc_dec(i64 %_p0)
  call void @prism_fatal(i64 ptrtoint (ptr @.str1 to i64))
  ret i64 0
}

; Function Attrs: nounwind
declare void @prism_fatal(i64) #0

; Function Attrs: nounwind
declare void @prism_apply_error() #0

attributes #0 = { nounwind }

== run ==
error: unhandled effect `throw@NotFound`
