tests/snapshots/snapshots__pipeline@factorial.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/factorial.pr
---
== tokens ==
VOpen Fn Ident("fact") LParen Ident("n") RParen Eq VOpen If Ident("n") EqEq Int(IntLit { value: 0, suffix: None }) Then VOpen Int(IntLit { value: 1, suffix: None }) VClose VSemi Else VOpen Ident("n") Star Ident("fact") LParen Ident("n") Minus Int(IntLit { value: 1, suffix: None }) RParen VClose VClose VSemi Fn Ident("main") LParen RParen Eq VOpen Let Ident("r") Eq Ident("fact") LParen Int(IntLit { value: 5, suffix: None }) RParen VSemi Let Ident("u") Eq Ident("println") LParen Ident("r") RParen VSemi Ident("r") VClose VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "fact",
            params: [
                Param {
                    name: "n",
                    ty: None,
                    borrow: false,
                    default: None,
                },
            ],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: If(
                    Spanned {
                        node: Bin(
                            Eq,
                            Spanned {
                                node: Var(
                                    "n",
                                ),
                                span: 18..19,
                            },
                            Spanned {
                                node: Int(
                                    IntLit {
                                        value: 0,
                                        suffix: None,
                                    },
                                ),
                                span: 23..24,
                            },
                        ),
                        span: 18..24,
                    },
                    Spanned {
                        node: Int(
                            IntLit {
                                value: 1,
                                suffix: None,
                            },
                        ),
                        span: 34..35,
                    },
                    Spanned {
                        node: Bin(
                            Mul,
                            Spanned {
                                node: Var(
                                    "n",
                                ),
                                span: 47..48,
                            },
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "fact",
                                        ),
                                        span: 51..55,
                                    },
                                    [
                                        Spanned {
                                            node: Bin(
                                                Sub,
                                                Spanned {
                                                    node: Var(
                                                        "n",
                                                    ),
                                                    span: 56..57,
                                                },
                                                Spanned {
                                                    node: Int(
                                                        IntLit {
                                                            value: 1,
                                                            suffix: None,
                                                        },
                                                    ),
                                                    span: 60..61,
                                                },
                                            ),
                                            span: 56..61,
                                        },
                                    ],
                                ),
                                span: 51..62,
                            },
                        ),
                        span: 47..62,
                    },
                ),
                span: 15..62,
            },
            wheres: [],
            span: 0..62,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Let(
                    "r",
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "fact",
                                ),
                                span: 86..90,
                            },
                            [
                                Spanned {
                                    node: Int(
                                        IntLit {
                                            value: 5,
                                            suffix: None,
                                        },
                                    ),
                                    span: 91..92,
                                },
                            ],
                        ),
                        span: 86..93,
                    },
                    Spanned {
                        node: Let(
                            "u",
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "println",
                                        ),
                                        span: 104..111,
                                    },
                                    [
                                        Spanned {
                                            node: Var(
                                                "r",
                                            ),
                                            span: 112..113,
                                        },
                                    ],
                                ),
                                span: 104..114,
                            },
                            Spanned {
                                node: Var(
                                    "r",
                                ),
                                span: 117..118,
                            },
                        ),
                        span: 96..118,
                    },
                ),
                span: 78..118,
            },
            wheres: [],
            span: 64..118,
        },
    ],
}

== types ==
fact : (Int) -> Int
main : () -> Int ! {IO}

== core (cbpv) ==
fn fact(n) =
  return n to t@0
  return 0 to t@1
  t@0 == t@1 to t@7
  if t@7 then
    return 1
  else
    return n to t@5
    return n to t@2
    return 1 to t@3
    t@2 - t@3 to t@4
    fact(t@4) to t@6
    t@5 * t@6
fn main() =
  return 5 to t@8
  fact(t@8) to r
  return r to t@9
  print t@9 to t@10
  print_nl to u
  return r

== fbip (rc) ==
fn fact(n) =
  return n to t@0
  return 0 to t@1
  dup t@0
  t@0 == t@1 to t@7
  if t@7 then
    drop t@7
    return 1
  else
    drop t@7
    return n to t@5
    return n to t@2
    return 1 to t@3
    dup t@2
    t@2 - t@3 to t@4
    fact(t@4) to %rc0
    drop t@4
    return %rc0 to t@6
    dup t@5
    t@5 * t@6
fn main() =
  return 5 to t@8
  fact(t@8) to %rc1
  drop t@8
  return %rc1 to r
  dup r
  return r to t@9
  print t@9 to t@10
  drop t@10
  print_nl to u
  drop u
  return r

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [798 x i8] c"scheme  prism-core-hash-v2\0Abundle  dca17e9efc43090d72149beb3c6ca33eb03722f09eac307b4d95665368d2904b\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:dca17e9efc43090d72149beb3c6ca33eb03722f09eac307b4d95665368d2904b\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_fact  554019e1b3573546277da4d001adb1d53ba02bcc0c8f0bb33c832ecdebd47ab4  fact\0Afn      prismfn_main  e96725a4857ab040d4e56d8758e1f81ce168fd4223bf86f0b5eb9bb011e59601  main\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [902 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  dca17e9efc43090d72149beb3c6ca33eb03722f09eac307b4d95665368d2904b\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:dca17e9efc43090d72149beb3c6ca33eb03722f09eac307b4d95665368d2904b\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_fact 554019e1b3573546277da4d001adb1d53ba02bcc0c8f0bb33c832ecdebd47ab4 fact arity 1 slots abi-word[arg0=%a0:word]\0Astate prismfn_main e96725a4857ab040d4e56d8758e1f81ce168fd4223bf86f0b5eb9bb011e59601 main arity 0 slots abi-word[]\0A\00", section ",.prism_kont", align 1
@.kont_symbol0 = private constant [13 x i8] c"prismfn_fact\00"
@.kont_hash0 = private constant [65 x i8] c"554019e1b3573546277da4d001adb1d53ba02bcc0c8f0bb33c832ecdebd47ab4\00"
@.kont_name0 = private constant [5 x i8] c"fact\00"
@.kont_symbol1 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash1 = private constant [65 x i8] c"e96725a4857ab040d4e56d8758e1f81ce168fd4223bf86f0b5eb9bb011e59601\00"
@.kont_name1 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [2 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_fact, ptr @.kont_symbol0, ptr @.kont_hash0, ptr @.kont_name0 }, { ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol1, ptr @.kont_hash1, ptr @.kont_name1 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 2, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_fact(i64 %a0) #0 {
entry:
  call void @prism_rc_inc(i64 %a0)
  %t2 = and i64 %a0, 1
  %t4 = and i64 %t2, 1
  %t5 = icmp eq i64 %t4, 1
  br i1 %t5, label %b0, label %b1

b0:                                               ; preds = %entry
  %t6 = icmp eq i64 %a0, 1
  %t7 = zext i1 %t6 to i64
  %t9 = shl i64 %t7, 1
  %t10 = or i64 %t9, 1
  br label %b2

b1:                                               ; preds = %entry
  %t11 = call i64 @prism_rt_int_cmp(i64 %a0, i64 1)
  %t13 = icmp eq i64 %t11, 0
  %t14 = zext i1 %t13 to i64
  %t16 = shl i64 %t14, 1
  %t17 = or i64 %t16, 1
  br label %b2

b2:                                               ; preds = %b1, %b0
  %t18 = phi i64 [ %t10, %b0 ], [ %t17, %b1 ]
  call void @prism_rc_dec(i64 %a0)
  call void @prism_rc_dec(i64 1)
  %t20 = icmp ne i64 %t18, 1
  br i1 %t20, label %b3, label %b4

b3:                                               ; preds = %b2
  call void @prism_rc_dec(i64 %t18)
  ret i64 3

b4:                                               ; preds = %b2
  call void @prism_rc_dec(i64 %t18)
  call void @prism_rc_inc(i64 %a0)
  %t26 = and i64 %a0, 3
  %t28 = and i64 %t26, 1
  %t29 = icmp eq i64 %t28, 1
  br i1 %t29, label %b5, label %b6

b5:                                               ; preds = %b4
  %t31 = ashr i64 %a0, 1
  %t34 = sub i64 %t31, 1
  %t36 = shl i64 %t34, 1
  %t37 = ashr i64 %t36, 1
  %t38 = icmp eq i64 %t37, %t34
  br i1 %t38, label %b8, label %b6

b6:                                               ; preds = %b5, %b4
  %t40 = call i64 @prism_rt_int_sub(i64 %a0, i64 3)
  br label %b7

b8:                                               ; preds = %b5
  %t39 = or i64 %t36, 1
  br label %b7

b7:                                               ; preds = %b6, %b8
  %t41 = phi i64 [ %t39, %b8 ], [ %t40, %b6 ]
  call void @prism_rc_dec(i64 %a0)
  call void @prism_rc_dec(i64 3)
  %t42 = call i64 @prismfn_fact(i64 %t41)
  call void @prism_rc_dec(i64 %t41)
  call void @prism_rc_inc(i64 %a0)
  %t45 = call i64 @prism_rt_int_mul(i64 %a0, i64 %t42)
  call void @prism_rc_dec(i64 %a0)
  call void @prism_rc_dec(i64 %t42)
  ret i64 %t45
}

; Function Attrs: nounwind
declare void @prism_rc_inc(i64) #0

; Function Attrs: nounwind
declare i64 @prism_rt_int_cmp(i64, i64) #0

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare i64 @prism_rt_int_sub(i64, i64) #0

; Function Attrs: nounwind
declare i64 @prism_rt_int_mul(i64, i64) #0

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  %t1 = call i64 @prismfn_fact(i64 11)
  call void @prism_rc_inc(i64 %t1)
  call void @prism_print_int(i64 %t1)
  call void @prism_rc_dec(i64 %t1)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  call void @prism_rc_dec(i64 0)
  ret i64 %t1
}

; Function Attrs: nounwind
declare void @prism_print_int(i64) #0

; Function Attrs: nounwind
declare void @prism_print_nl() #0

attributes #0 = { nounwind }

== run ==
output: [120]
result: 120
