tests/snapshots/snapshots__pipeline@fail_unhandled.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/fail_unhandled.pr
---
== tokens ==
VOpen Fn Ident("must_not_fail") LParen RParen Colon KwInt Eq VOpen Ident("guard") LParen False RParen VSemi Int(IntLit { value: 0, suffix: None }) VClose VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Ident("must_not_fail") LParen RParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "must_not_fail",
            params: [],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Let(
                    "_",
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "guard",
                                ),
                                span: 188..193,
                            },
                            [
                                Spanned {
                                    node: Bool(
                                        false,
                                    ),
                                    span: 194..199,
                                },
                            ],
                        ),
                        span: 188..200,
                    },
                    Spanned {
                        node: Int(
                            IntLit {
                                value: 0,
                                suffix: None,
                            },
                        ),
                        span: 203..204,
                    },
                ),
                span: 188..204,
            },
            wheres: [],
            span: 159..204,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 218..225,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "must_not_fail",
                                    ),
                                    span: 226..239,
                                },
                                [],
                            ),
                            span: 226..241,
                        },
                    ],
                ),
                span: 218..242,
            },
            wheres: [],
            span: 206..242,
        },
    ],
}

== types ==
[E2000] Scope Error: in `must_not_fail`: unbound variable 'guard'
   ╭─[ <source>:5:3 ]
   │
 5 │   guard(false)
   │   ──┬──  
   │     ╰──── in `must_not_fail`: unbound variable 'guard'
───╯
